<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="18dp"

    android:background="@color/md_theme_light_onError"
    android:padding="14dp"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        android:backgroundTint="@color/md_theme_light_surface">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:id="@+id/branch_icon"
                android:layout_marginRight="@dimen/text_margin"
                android:src="@drawable/ic_computer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Branch"
                android:id="@+id/branch_title"
                android:textSize="@dimen/title_size2"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/branch_desc"
            android:text="@string/about_collage"
            android:layout_marginTop="8dp"
            android:textSize="17sp"
            android:textColor="@color/textColor"
            android:fontFamily="@string/light"
            android:justificationMode="inter_word"/>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>
