<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intership.Codsoft">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <!-- Description TextView -->
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_view_description1"
            android:textSize="16sp"
            android:justificationMode="inter_word"
            android:textAlignment="viewStart"
            android:autoLink="email|web"
            android:linksClickable="true"
            android:onClick="openEmailTelegramLinkedIn" />

        <!-- Email EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDescription"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Full Name EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFullName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilEmail"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Full Name" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Contact No. EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilContactNo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilFullName"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Contact No." />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Name of College EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCollege"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilContactNo"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCollege"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name of College" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Gender Spinner -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilCollege"
            android:layout_marginTop="16dp">

            <Spinner
                android:id="@+id/spnGender"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/spinner_outline"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Academic Degree Spinner -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAcademicDegree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilGender"
            android:layout_marginTop="16dp">

            <Spinner
                android:id="@+id/spnAcademicDegree"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/spinner_outline"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Degree Status Spinner -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDegreeStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilAcademicDegree"
            android:layout_marginTop="16dp">

            <Spinner
                android:id="@+id/spnDegreeStatus"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/spinner_outline"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Preferred Internship Domain Spinner -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilInternshipDomain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilDegreeStatus"
            android:layout_marginTop="16dp">

            <Spinner
                android:id="@+id/spnInternshipDomain"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/spinner_outline"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Learn About Cognifyz Spinner -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLearnAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilInternshipDomain"
            android:layout_marginTop="16dp">

            <Spinner
                android:id="@+id/spnLearnAbout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/spinner_outline"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- LinkedIn and Telegram TextViews combined with Join Group CheckBox -->
        <LinearLayout
            android:id="@+id/llLinkedInTelegram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilLearnAbout"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tvLinkedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingLeft="10dp"
                android:text="Join LinkedIn"
                android:clickable="true"
                android:onClick="openLinkedIn" />

            <TextView
                android:id="@+id/tvTelegram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:text="Join Telegram Community"
                android:clickable="true"
                android:onClick="openTelegram" />

            <CheckBox
                android:id="@+id/cbJoinGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes, I join the group" />

        </LinearLayout>

        <!-- Radio Buttons (India and Other) -->
        <RadioGroup
            android:id="@+id/rgCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llLinkedInTelegram"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/rbIndia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="INDIA" />

            <RadioButton
                android:id="@+id/rbOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Other" />

        </RadioGroup>

        <!-- Registration Options TextView -->
        <TextView
            android:id="@+id/tvRegistrationOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rgCountry"
            android:layout_marginTop="20dp"
            android:text="@string/registration_options_description"
            android:textSize="16sp"
            android:justificationMode="inter_word"
            android:textAlignment="viewStart"
            />

        <!-- Registration Options Radio Group -->
        <RadioGroup
            android:id="@+id/rgRegistrationOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRegistrationOptions"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbRegistrationCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_registration_cost"/>

            <RadioButton
                android:id="@+id/rbDocumentationCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_documentation_cost"/>
        </RadioGroup>

        <!-- Terms and Conditions CheckBox -->
        <CheckBox
            android:id="@+id/cbTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rgRegistrationOptions"
            android:layout_marginTop="16dp"
            android:text="I have read and accept all the terms and conditions." />

        <TextView
            android:id="@+id/tvUPI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbTerms"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:text="UPI ID: cognifyztechnologies.39844589@hdfcbank"
            android:layout_marginTop="20dp" />

        <!-- QR Code ImageView -->
        <ImageView
            android:id="@+id/imgQrCode"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@id/tvUPI"
            android:src="@drawable/cogni_pay"
            />

        <!-- File Selection TextView -->
        <TextView
            android:id="@+id/tvFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgQrCode"
            android:layout_marginTop="30dp"
            android:text="Choose File" />

        <!-- Apply Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApply"
            style="@style/btnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvFile"
            android:layout_marginTop="56dp"
            android:text="Apply" />

    </RelativeLayout>

</ScrollView>
